<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/btn_news"
        android:icon="@drawable/ic_news"
        android:title="@string/btnNews" />
    <item
        android:id="@+id/btn_catalog"
        android:icon="@drawable/ic_catalog"
        android:title="@string/btnCatalog" />
    <item
        android:id="@+id/btn_basket"
        android:icon="@drawable/ic_basket"
        android:title="@string/btnBasket" />
    <item
        android:id="@+id/btn_promo"
        android:enabled="true"
        android:icon="@drawable/ic_promo"
        android:title="@string/btnPromo" />
    <item
        android:id="@+id/btn_account"
        android:icon="@drawable/ic_account"
        android:title="@string/btnAccount" />
</menu>