<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.auth.LoginFragment">


    <View
        android:id="@+id/shape"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:background="@drawable/shape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"></View>

    <TextView
        android:id="@+id/lf_txt_v_check_in_title"
        style="@style/Theme.Cafe.AuthTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check_in"

        app:layout_constraintBottom_toBottomOf="@+id/shape"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/lg_LL_case_fields"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical"

        app:layout_constraintBottom_toTopOf="@id/lf_btn_signup_enter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/shape">

        <EditText
            android:id="@+id/lf_edit_txt_name"
            style="@style/Theme.Cafe.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/name"
            android:hint="@string/name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/lf_edit_txt_surname"
            style="@style/Theme.Cafe.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/surname"
            android:hint="@string/surname"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/lf_edit_txt_date_of_birth"
            style="@style/Theme.Cafe.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/date_of_birth"
            android:hint="@string/date_of_birth"
            android:inputType="date" />

        <EditText
            android:id="@+id/lf_edit_txt_city"
            style="@style/Theme.Cafe.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/city"
            android:hint="@string/city"
            android:inputType="text" />

        <EditText
            android:id="@+id/lf_edit_txt_phone_number"
            style="@style/Theme.Cafe.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/phone_number"
            android:hint="@string/phone_number"
            android:inputType="phone" />

        <EditText
            android:id="@+id/lf_edit_txt_email"
            style="@style/Theme.Cafe.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/email"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/lf_edit_txt_password"
            style="@style/Theme.Cafe.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=" "
            android:hint="@string/password"
            android:inputType="textPassword" />

        <RadioGroup
            android:id="@+id/lf_edit_txt_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/lf_edit_txt_gender_m"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/gender_m" />

            <RadioButton
                android:id="@+id/lf_edit_txt_gender_w"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/gender_w" />
        </RadioGroup>

    </LinearLayout>

    <Button
        android:id="@+id/lf_btn_signup_enter"
        style="@style/Theme.Cafe.Button"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/register"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lg_LL_case_fields" />

</androidx.constraintlayout.widget.ConstraintLayout>