<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="10dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/fp_img_v_product_logo"
                android:layout_width="150dp"
                android:layout_height="130dp"
                android:background="@color/colorPrimary"
                android:contentDescription="@string/todo"
                android:scaleType="centerCrop"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/fp_txt_v_product_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="sans-serif-light"
                android:maxLines="2"
                android:textColor="@android:color/background_dark"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/fp_btn_product_favorite_add"
                app:layout_constraintStart_toEndOf="@id/fp_img_v_product_logo"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/fp_btn_product_favorite_add"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/ic_favorite"
                app:layout_constraintEnd_toEndOf="@id/fp_btn_product_delete"
                app:layout_constraintTop_toTopOf="@id/fp_txt_v_product_name" />

            <TextView
                android:id="@+id/fp_txt_v_product_price"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@id/fp_txt_v_product_name"
                app:layout_constraintBottom_toTopOf="@+id/bi_lin_la"
                app:layout_constraintTop_toBottomOf="@id/fp_txt_v_product_name"
                />

            <Button
                android:id="@+id/fp_btn_product_delete"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/ic_delete"
                android:textSize="10sp"
                app:layout_constraintBottom_toBottomOf="@id/bi_lin_la"
                app:layout_constraintEnd_toEndOf="parent"
                tools:ignore="SmallSp" />

            <LinearLayout
                android:id="@+id/bi_lin_la"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="visible"
                app:layout_constraintStart_toStartOf="@id/fp_txt_v_product_name"
                app:layout_constraintTop_toBottomOf="@id/fp_txt_v_product_price"
                app:layout_constraintBottom_toBottomOf="parent"
                >

                <Button
                    android:id="@+id/fp_btn_minus"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:text="@string/del"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/fp_txt_v_product_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:paddingHorizontal="15dp"
                    android:text="@string/_0"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/fp_btn_plus"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:text="@string/add"
                    android:textSize="12sp" />
            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>