<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.auth.AuthFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/lf_CL_header_auth"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/shape"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:background="@drawable/shape"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/lf_img_v_logo"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:src="@drawable/logo_auth"

            android:scaleType="centerCrop"
            app:layout_constraintBottom_toTopOf="@id/lf_txt_v_logo_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/lf_txt_v_logo_title"
            style="@style/Theme.Cafe.AuthTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="
"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lf_img_v_logo" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="300dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lf_CL_header_auth">

        <Button
            android:id="@+id/af_btn_login_email"
            style="@style/Theme.Cafe.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="Войти по Email"
            app:layout_constraintBottom_toTopOf="@id/af_btn_login_phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <Button
            android:id="@+id/af_btn_login_phone"
            style="@style/Theme.Cafe.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="Войти по номеру телефона"
            android:maxLines="1"
            app:layout_constraintBottom_toTopOf="@id/query_code"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/af_btn_login_email" />

        <Button
            android:id="@+id/query_code"
            style="@style/Theme.Cafe.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/af_txt_v_or"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/af_btn_login_phone" />

        <TextView
            android:id="@+id/af_txt_v_or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/or"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@id/af_btn_signup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/query_code" />

        <Button
            android:id="@+id/af_btn_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/create_new_account"
            android:textColor="@color/colorPrimary"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/af_txt_v_or" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>